terraform/prometheus-grafana/prom-nodeapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodeapp
  template:
    metadata:
      labels:
        app: nodeapp
    spec:
      containers:
        - name: nodeapp
          image: towhidk2/nodeapp:p1
          ports:
          - containerPort: 3003
            name: nodeapp-port
---
apiVersion: v1
kind: Service
metadata:
  name: nodeapp-service
  labels:
    app: nodeapp-svc
spec:
  selector:
    app: nodeapp
  type: ClusterIP
  ports:
    - name: nodeapp-svc-port
      port: 80
      targetPort: nodeapp-port
